@@ -5,9 +5,12 @@
 
 v.0.9.5
 =================
-+ - Tooltips for toolbar buttons were added.
 + - The WTL 8.0.7058 was used.
++ - Tooltips for toolbar buttons were added.
++ - Toolbar was extended to show current/total pages and to support history navigation...
++ - Browsing history support (in progress)...
 + - Bookmark dialog (in progress)...
++ - "Tile" mode (in progress)...
 
 v.0.9.4
 =================
